--- a/anvil.yaml
+++ b/anvil.yaml
@@ -8,9 +8,9 @@ services:
   client_config: {}
   server_config: {}
 startup: {type: form, module: MainForm}
-package_name: Compras_MV___M3
+package_name: Form_Builder_Example
 allow_embedding: false
-name: Clone of Compras MV - M3
+name: Form Builder Example
 runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
 startup_form: null
 native_deps: {head_html: '<script src="https://unpkg.com/imask"></script>
