--- a/client_code/HomeForm/form_template.yaml
+++ b/client_code/HomeForm/form_template.yaml
@@ -1,5 +1,16 @@
-container: {type: ColumnPanel}
+container:
+  type: ColumnPanel
+  properties: {col_widths: '{}'}
 components:
+- type: RichText
+  properties: {role: null, align: left, tooltip: '', enable_slots: true, border: '',
+    foreground: '', visible: true, font_size: null, content: '# Form Builder Example
+
+
+      This app shows a way to automate CRUD', font: '', spacing_above: small, spacing_below: small,
+    data: null, background: '', format: markdown}
+  name: rich_text_1
+  layout_properties: {grid_position: 'FDZNBY,HKLPZW'}
 - type: Button
   properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
     foreground: '', visible: true, text: Fornecedores, font_size: null, font: '',
