Created ServerModule1, Supplier, Supplier.EditForm, Supplier.ListForm and 3 more; Edited ErrorForm, HomeForm, MainForm, settings and 2 more; Deleted Fornecedor, Fornecedor.EditForm, Fornecedor.ListForm, Fornecedor.ListForm.ItemTemplate1 and 2 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,20 +1,21 @@
 unique_ids:
   forms:
     ErrorForm: '1692043698747953386569073.2786'
-    Fornecedor.EditForm: '1692044626292349365079943.58856'
-    Fornecedor.ListForm: '1692043208400329125598645.43176'
-    Fornecedor.ListForm.ItemTemplate1: '1692043808427915029929211.8049'
     HomeForm: '1692043303667541490511804.2264'
     MainForm: GCOYCAE6SOFQNNMK6M3HGFLSWXHCNGSV
+    Supplier.EditForm: '1692044626292349365079943.58856'
+    Supplier.ListForm: '1692043208400329125598645.43176'
+    Supplier.ListForm.ItemTemplate1: '1692043808427915029929211.8049'
     utils.form_builder.FormInput: '1692048718136668114311162.19'
   modules:
-    Fornecedor: '1692043246577777237631084.8053'
-    Fornecedor.form_configs: '1692108012900854222090416.3264'
-    Fornecedor.schemas: '169203440714331479587719.76711'
+    Supplier: '1692043246577777237631084.8053'
+    Supplier.form_configs: '1692108012900854222090416.3264'
+    Supplier.schemas: '169203440714331479587719.76711'
     utils: '1692034458749298295302036.6179'
     utils.form_builder: '1692044896319648699013561.0349'
     utils.nested_dict: '1692034485069405085547127.61224'
-  server_modules: {}
+  server_modules:
+    ServerModule1: '169211659410460219631558.07919'
   assets:
     standard-page.html: EYWOCLXJHYWBVRJLPMQO5JC4JV4XFWA5
     theme.css: R6CWWAZI7SDWNB62TNSTZKGUPAU2LJB3
