--- a/client_code/MainForm/form_template.yaml
+++ b/client_code/MainForm/form_template.yaml
@@ -36,8 +36,8 @@ components:
     event_bindings: {click: btn_refresh_click}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: Compras MV, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+    visible: true, text: Form Builder Example, font_size: null, wrap_on: mobile, font: '',
+    col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_home
   layout_properties: {slot: title}
